/*
 * Copyright 2019 Balaji Jinnah and Contributors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

 syntax = "proto3";

 package api;
 
 message QueryRequest {
     repeated string partitions = 1;
     uint64 start_ts = 2;
     uint64 end_ts = 3;
     uint64 count = 4;
     uint64 offset = 5;
     bool forward = 6;
     string query = 7;
 }
 
 message QueryResponse {
     repeated LogLine lines = 1;
 }
 
 message LogLine {
     string line = 1;
     uint64 ts = 2;
     string app = 3;
 }
 
 message PartitionResponse {
     repeated string partitions = 1;
 }

 message PartitionRequest {

 }
 // Interface exported by the server.
 service Pathivu {
    // Tail 
   rpc Tail(QueryRequest) returns (stream QueryResponse) {}
    // Query
   rpc Query(QueryRequest) returns (QueryResponse) {}
    // Partitions
   rpc Partitions(PartitionRequest) returns (PartitionResponse) {}
 }